<resources>
    <string name="app_name">ProjectMobileProg18p4496</string>
    <string name="appTitle">Wagba</string>
    <string name="Register">Register now</string>
    <string name="Login">Sign In </string>
    <string name="Forgot">Forgot Password? </string>
    <string name="accountReg">Already have an account? </string>
    <string name="accountLogin"> Don\'t have an account?  </string>
    <string name="RegisterNow"> Register </string>
    <string name="textLogin">Welcome Back! </string>
    <string name="Name">Enter Your Name </string>
    <string name="phoneNumber">Phone Number </string>
    <string name="Email">Enter Email </string>
    <string name="Password">Password </string>
    <string name="RegisterBtn">Register </string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_home">Main_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pizza_name">Pizza Ranch</string>
    <string name="rate_good">4.5</string>
    <string name="time">9:00-18:00</string>
    <string name="dish_price">60 EGP</string>
    <string name="dish_details">Ranch Sauce, Grilled Chicken, Mushrooms and Mozzarella</string>
    <string name="tot_price">0</string>
    <string name="egp">EGP </string>
    <string name="del_price">Free</string>
    <string name="menu_home">Home</string>
    <string name="Hi">Hi Nouran,</string>
    <string name="name_user">Nouran Saad</string>
    <string name="resturants">Our featured restaurants</string>
    <string name="menu_history">History</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="delivery_cart">Delivery Price</string>
    <string name="Subprice_cart">Sub Total</string>
    <string name="price_cart">Total Price</string>
    <string name="available">Available</string>
    <string name="check_out">Checkout</string>
    <string name="addToCart">add To Cart</string>
    <string name="deliveryAdd">Delievery Address</string>
    <string name="Address">Faculty of Engineering</string>
    <string name="time_slot">12 pm</string>
    <string name="time_slot2">3 pm</string>
    <string name="Address_det">Ain Shams,Abdou Basha</string>
    <string name="pay1">Cash On Delivery</string>
    <string name="pay_method">Payment is with cash only</string>
    <string name="place_order">Place Order</string>
    <string name="orderId">Order Id</string>
    <string name="orderCode1">Track your order</string>
    <string name="orderCode2">#236589</string>
    <string name="historyTime">13/12/2022</string>
    <string name="historyTime2">15:07:00 PM</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="estimated_time_val">35 Mins</string>
    <string name="Ordered">Your order is begin prepared</string>
    <string name="delivery_agent">Delivery agent  picked up your order</string>
    <string name="delivery_location">OnTheWay</string>
    <string name="delivery_deliverd">Your food is delivered!</string>
    <string name="ongoing">Ongoing Order</string>
    <string name="Delivered">Delivered</string>
    <string name="PizzaHut">Pizza Hut</string>
    <string name="OrderDetails">Pizza ranch (1),pizza pepperoni (2),salad (3)</string>
    <string name="gate1">Gate 3</string>
    <string name="gate2">Gate 4</string>
    <string name="back_to_home">Back To Home</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>

</resources>
