<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:iconTint="@color/green"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_home"
            android:iconTint="@color/green"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:iconTint="@color/green"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_myCart"
            android:iconTint="@color/green"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart" />

    </group>
</menu>