<?xml version="1.0" encoding="utf-8"?>


<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:orientation="vertical"
      android:gravity="center"
      android:background="@color/white">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/fastfood"/>
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/titleRegister"
      android:gravity="center"

      android:text="@string/Register"
      android:layout_margin="17dp"
      android:textSize="32sp"
      android:textStyle="bold"
      android:textColor="@color/green"

      />
  </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"

    android:background="@drawable/register_bk"
    android:orientation="vertical"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:gravity="center">


  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:id="@+id/username"
      android:hint="@string/Name"
      android:layout_margin="15sp"
      android:textColorHint="@color/white"
      android:padding="20sp"
      android:inputType="text"
      android:background="@drawable/editxt_view"
      android:drawablePadding="20dp"
      android:drawableStart="@drawable/ic_baseline_person_24"

      />

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:id="@+id/PhoneNumber"
      android:inputType="number"
      android:hint="@string/phoneNumber"
      android:layout_margin="15dp"
      android:textColorHint="@color/white"
      android:padding="20sp"
      android:background="@drawable/editxt_view"
      android:drawablePadding="20sp"
      android:drawableStart="@drawable/phone"

      />


  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:id="@+id/email"
      android:inputType="textEmailAddress"
      android:hint="@string/Email"
      android:layout_margin="15dp"
      android:textColorHint="@color/white"
      android:padding="20dp"
      android:background="@drawable/editxt_view"
      android:drawablePadding="20sp"
      android:drawableStart="@drawable/ic_baseline_mail_24"

      />


  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginStart="15dp"
      android:layout_marginTop="15dp"
      android:layout_marginEnd="15dp"
      android:layout_marginBottom="15dp"
      android:background="@drawable/editxt_view"
      android:drawableStart="@drawable/ic_baseline_lock_24"
      android:inputType="numberPassword"
      android:drawablePadding="20dp"
      android:hint="@string/Password"
      android:padding="20dp"
      android:textColorHint="@color/white"
  />

  <Button
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="15dp"
      android:background="@drawable/btn_shape"
      android:textColor="@color/white"
      android:id="@+id/btnRegister"
      android:text="@string/RegisterBtn"
      android:textSize="20sp"
      />


  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountReg"
        android:textColor="@color/white"
        android:layout_marginStart="15dp"

        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/Loginow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:textAlignment="center"
        />
  </LinearLayout>
</LinearLayout>
  </androidx.appcompat.widget.LinearLayoutCompat>