<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android" >
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".CheckOut">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_out"
        android:textSize="45sp"
        android:gravity="center"
        android:drawableRight="@drawable/logout"
        android:textColor="@color/orange"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"


        />
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:layout_margin="10dp"
    app:cardElevation="10dp"


    app:cardCornerRadius="20dp"

>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">
    <TextView
        android:id="@+id/title_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deliveryAdd"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/green"
        android:textStyle="bold"

        android:textSize="26sp"
        />
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    app:cardCornerRadius="15dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:hint="@string/Address"
        android:textColorHint="@color/orange"
        android:padding="10sp"
        android:background="@drawable/address_shape"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/ic_baseline_home_24"
        android:textSize="26sp" />
        <RadioGroup android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/radioGroup1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/gate1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:background="@drawable/address_shape"
                android:drawableEnd="@drawable/ic_baseline_location_on_24"
                android:drawablePadding="20dp"
                android:elevation="5dp"
                android:layoutDirection="rtl"
                android:padding="10sp"
                android:text="@string/gate1"
                android:textAlignment="textStart"
                android:textColor="@color/orange"
                android:textSize="27sp"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/gate2"
                android:id="@+id/gate2"
                android:textColor="@color/orange"
                android:layoutDirection="rtl"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:background="@drawable/address_shape"
                android:textSize="27sp"
                android:elevation="5dp"
                android:padding="10sp"
                android:drawablePadding="20dp"
                android:drawableEnd="@drawable/ic_baseline_location_on_24"
                android:textStyle="bold" />
        </RadioGroup>
  <!--  <EditText
        android:id="@+id/Address_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Address_det"
        android:textColorHint="@color/orange"
        android:padding="10sp"
        android:background="@drawable/address_shape"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:textSize="21sp" />-->
        <RadioGroup android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/radioGroup"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/time_delivery1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:background="@drawable/address_shape"
                android:drawableEnd="@drawable/ic_baseline_access_time_filled_24"
                android:drawablePadding="20dp"
                android:elevation="5dp"
                android:layoutDirection="rtl"
                android:padding="10sp"
                android:text="@string/time_slot"
                android:textAlignment="textStart"
                android:textColor="@color/orange"
                android:textSize="27sp"
                android:textStyle="bold" />

            <RadioButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/time_slot2"
            android:id="@+id/time_delivery2"
            android:textColor="@color/orange"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:background="@drawable/address_shape"
            android:textSize="27sp"
            android:elevation="5dp"
            android:padding="10sp"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_baseline_access_time_filled_24"
            android:textStyle="bold" />
        </RadioGroup>
       <!-- <EditText
            android:id="@+id/time_delivery"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/time_slot"
            android:textColorHint="@color/orange"
            android:padding="10sp"
            android:background="@drawable/address_shape"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/ic_baseline_access_time_filled_24"
            android:textSize="26sp" />-->
    </LinearLayout>
</androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"

        android:layout_margin="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"


            >
            <TextView
                android:id="@+id/total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_cart"
                android:layout_margin="5dp"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <TextView
                android:id="@+id/cash_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay1"
                android:textColor="@color/orange"
                android:layoutDirection="rtl"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/money"
                android:drawablePadding="10dp"
                android:textStyle="bold"
                android:textSize="22sp"
                />
            <TextView
                android:id="@+id/total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tot_price"
                android:textColor="@color/orange"
                android:layout_marginStart="25dp"
                android:textStyle="bold"
                android:textSize="22sp"
                />
            <TextView
                android:id="@+id/egp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/egp"
                android:textColor="@color/orange"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textSize="22sp"
                />
        </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape"

        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/place_order"
        android:onClick="goToOrder"

        android:textSize="20sp"
        />
</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>